update .env & new file for error translation

--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=mysql://root:LesDorees2017@127.0.0.1:3306/snowtricks
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://smtp-relay.sendinblue.com:587?encryption=tls&username=karim.ennassiri@2b1stconsulting.com&password=yPSgmEcqhXRIM5t0
+MAILER_URL=smtp://smtp-relay.sendinblue.com:587?encryption=tls&username=guilhemmaxime@gmail.com&password=JpTfc7gCZwSmQBHj
 ###< symfony/swiftmailer-bundle ###
