--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 ###> symfony/framework-bundle ###
+.idea/php.xml
+.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -23,4 +25,5 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
-.idea/php.xml
+
+.DS_Store
