--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     image_directory: '%kernel.project_dir%/assets/img/uploads'
+    image_directory_profile: '%kernel.project_dir%/assets/img/uploads/profile'
 
 services:
     # default configuration for services in *this* file
