--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     image_directory: '%kernel.project_dir%/assets/img/uploads'
     image_directory_profile: '%kernel.project_dir%/assets/img/uploads/profile'
+    image_directory_default: '%kernel.project_dir%/assets/img/uploads/default'
 
 services:
     # default configuration for services in *this* file
